<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/check_in"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center"
        android:padding="30dp"
        android:textSize="20dp"
        android:text="It's time to check in. How are you feeling?" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"

            android:orientation="vertical">

            <ImageButton
                android:id="@+id/happy_btn"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:srcCompat="@drawable/happy" />

            <ImageButton
                android:id="@+id/sad_btn"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:srcCompat="@drawable/sad" />


            <ImageButton
                android:id="@+id/mad_btn"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:srcCompat="@drawable/mad" />

            <ImageButton
                android:id="@+id/sick_btn"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:srcCompat="@drawable/sick" />

            <ImageButton
                android:id="@+id/injured_btn"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                app:srcCompat="@drawable/hurt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="166dp"
            android:layout_height="469dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/text_btn"
                android:layout_width="156dp"
                android:layout_height="178dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/text_icon"
                android:text="TEXT PARENT"

                />

            <Button
                android:id="@+id/call_btn"
                android:layout_width="156dp"
                android:layout_height="163dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/telephone2"

                android:text="CALL PARENT" />

            <Button
                android:id="@+id/emergency_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:backgroundTint="#FF0000"
                android:text="EMERGENCY!" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>