...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".childactivity.MainActivity"    >

    <Button
        android:id="@+id/login_text_view"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="100dp"
        android:text="Are you a Parent? Log In Here"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A86FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
